// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldSelectCategory Component should export select options: toolbarFieldOptions 1`] = `
[
  {
    "component": [Function],
    "isClearable": false,
    "options": [
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularity, {"context":"Daily"})",
        "value": "Daily",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularity, {"context":"Weekly"})",
        "value": "Weekly",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularity, {"context":"Monthly"})",
        "value": "Monthly",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularity, {"context":"Quarterly"})",
        "value": "Quarterly",
      },
    ],
    "selected": false,
    "title": "t(curiosity-toolbar.label_filter, {"context":"granularity"})",
    "value": "granularity",
  },
  {
    "component": [Function],
    "isClearable": false,
    "options": [
      {
        "_title": "current",
        "isCurrent": true,
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"current"})",
        "value": {
          "endDate": 2019-07-31T23:59:59.999Z,
          "startDate": 2019-07-01T00:00:00.000Z,
        },
      },
      {
        "_title": "june",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"June"})",
        "value": {
          "endDate": 2019-06-30T23:59:59.999Z,
          "startDate": 2019-06-01T00:00:00.000Z,
        },
      },
      {
        "_title": "may",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"May"})",
        "value": {
          "endDate": 2019-05-31T23:59:59.999Z,
          "startDate": 2019-05-01T00:00:00.000Z,
        },
      },
      {
        "_title": "april",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"April"})",
        "value": {
          "endDate": 2019-04-30T23:59:59.999Z,
          "startDate": 2019-04-01T00:00:00.000Z,
        },
      },
      {
        "_title": "march",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"March"})",
        "value": {
          "endDate": 2019-03-31T23:59:59.999Z,
          "startDate": 2019-03-01T00:00:00.000Z,
        },
      },
      {
        "_title": "february",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"February"})",
        "value": {
          "endDate": 2019-02-28T23:59:59.999Z,
          "startDate": 2019-02-01T00:00:00.000Z,
        },
      },
      {
        "_title": "january",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"January"})",
        "value": {
          "endDate": 2019-01-31T23:59:59.999Z,
          "startDate": 2019-01-01T00:00:00.000Z,
        },
      },
      {
        "_title": "december",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"December 2018"})",
        "value": {
          "endDate": 2018-12-31T23:59:59.999Z,
          "startDate": 2018-12-01T00:00:00.000Z,
        },
      },
      {
        "_title": "november",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"November 2018"})",
        "value": {
          "endDate": 2018-11-30T23:59:59.999Z,
          "startDate": 2018-11-01T00:00:00.000Z,
        },
      },
      {
        "_title": "october",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"October 2018"})",
        "value": {
          "endDate": 2018-10-31T23:59:59.999Z,
          "startDate": 2018-10-01T00:00:00.000Z,
        },
      },
      {
        "_title": "september",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"September 2018"})",
        "value": {
          "endDate": 2018-09-30T23:59:59.999Z,
          "startDate": 2018-09-01T00:00:00.000Z,
        },
      },
      {
        "_title": "august",
        "selected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"August 2018"})",
        "value": {
          "endDate": 2018-08-31T23:59:59.999Z,
          "startDate": 2018-08-01T00:00:00.000Z,
        },
      },
    ],
    "selected": false,
    "title": "t(curiosity-toolbar.label_filter, {"context":"rangedMonthly"})",
    "value": "rangedMonthly",
  },
  {
    "component": [Function],
    "isClearable": false,
    "options": [
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_uom, {"context":"cores"})",
        "value": "cores",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_uom, {"context":"sockets"})",
        "value": "sockets",
      },
    ],
    "selected": false,
    "title": "t(curiosity-toolbar.label_filter, {"context":"uom"})",
    "value": "uom",
  },
  {
    "component": [Function],
    "isClearable": true,
    "options": [
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_billing_provider, {"context":"red hat"})",
        "value": "red hat",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_billing_provider, {"context":"aws"})",
        "value": "aws",
      },
    ],
    "selected": false,
    "title": "t(curiosity-toolbar.label_filter_billing, {"context":"provider"})",
    "value": "billing_provider",
  },
  {
    "component": [Function],
    "isClearable": true,
    "options": [
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_sla, {"context":"Premium"})",
        "value": "Premium",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_sla, {"context":"Standard"})",
        "value": "Standard",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_sla, {"context":"Self-Support"})",
        "value": "Self-Support",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_sla, {"context":"none"})",
        "value": "",
      },
    ],
    "selected": false,
    "title": "t(curiosity-toolbar.label_filter, {"context":"sla"})",
    "value": "sla",
  },
  {
    "component": [Function],
    "isClearable": true,
    "options": [
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_usage, {"context":"Production"})",
        "value": "Production",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_usage, {"context":"Development/Test"})",
        "value": "Development/Test",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_usage, {"context":"Disaster Recovery"})",
        "value": "Disaster Recovery",
      },
      {
        "selected": false,
        "title": "t(curiosity-toolbar.label_usage, {"context":"none"})",
        "value": "",
      },
    ],
    "selected": false,
    "title": "t(curiosity-toolbar.label_filter, {"context":"usage"})",
    "value": "usage",
  },
  {
    "component": [Function],
    "isClearable": true,
    "options": [],
    "selected": false,
    "title": "t(curiosity-toolbar.label_filter, {"context":"category"})",
    "value": "category",
  },
  {
    "component": [Function],
    "isClearable": true,
    "options": null,
    "selected": false,
    "title": "t(curiosity-toolbar.label_filter_display_name, {"context":"contains"})",
    "value": "display_name_contains",
  },
]
`;

exports[`ToolbarFieldSelectCategory Component should handle updating categories through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "currentFilter": "rangedMonthly",
        "type": "SET_FILTER_TYPE",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldSelectCategory Component should handle updating categories through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "currentFilter": "dolor sit",
        "type": "SET_FILTER_TYPE",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldSelectCategory Component should render a basic component: basic 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {"context":"filter"})"
  ariaLabel="Select option"
  className=""
  data-test="toolbarFieldCategory"
  direction="down"
  id="generatedid-"
  isDisabled={false}
  isDropdownButton={false}
  isFlipEnabled={false}
  isInline={true}
  isToggleText={true}
  maxHeight={null}
  name={null}
  onSelect={[Function]}
  onSplitButton={[Function]}
  options={
    [
      {
        "component": [Function],
        "isClearable": true,
        "options": [
          {
            "selected": false,
            "title": "t(curiosity-toolbar.label_sla, {"context":"Premium"})",
            "value": "Premium",
          },
          {
            "selected": false,
            "title": "t(curiosity-toolbar.label_sla, {"context":"Standard"})",
            "value": "Standard",
          },
          {
            "selected": false,
            "title": "t(curiosity-toolbar.label_sla, {"context":"Self-Support"})",
            "value": "Self-Support",
          },
          {
            "selected": false,
            "title": "t(curiosity-toolbar.label_sla, {"context":"none"})",
            "value": "",
          },
        ],
        "selected": false,
        "title": "t(curiosity-toolbar.label_filter, {"context":"sla"})",
        "value": "sla",
      },
      {
        "component": [Function],
        "isClearable": true,
        "options": [
          {
            "selected": false,
            "title": "t(curiosity-toolbar.label_usage, {"context":"Production"})",
            "value": "Production",
          },
          {
            "selected": false,
            "title": "t(curiosity-toolbar.label_usage, {"context":"Development/Test"})",
            "value": "Development/Test",
          },
          {
            "selected": false,
            "title": "t(curiosity-toolbar.label_usage, {"context":"Disaster Recovery"})",
            "value": "Disaster Recovery",
          },
          {
            "selected": false,
            "title": "t(curiosity-toolbar.label_usage, {"context":"none"})",
            "value": "",
          },
        ],
        "selected": false,
        "title": "t(curiosity-toolbar.label_filter, {"context":"usage"})",
        "value": "usage",
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {"context":"filter"})"
  position="left"
  selectedOptions="sla"
  splitButtonVariant={null}
  toggleIcon={
    <FilterIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  }
  variant="single"
/>
`;

exports[`ToolbarFieldSelectCategory Component should return options, and an updated current category with a hook: options, currentCategory, hook 1`] = `
{
  "currentCategory": "sla",
  "initialCategory": undefined,
  "options": [
    {
      "component": [Function],
      "isClearable": true,
      "options": [
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_usage, {"context":"Production"})",
          "value": "Production",
        },
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_usage, {"context":"Development/Test"})",
          "value": "Development/Test",
        },
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_usage, {"context":"Disaster Recovery"})",
          "value": "Disaster Recovery",
        },
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_usage, {"context":"none"})",
          "value": "",
        },
      ],
      "selected": false,
      "title": "t(curiosity-toolbar.label_filter, {"context":"usage"})",
      "value": "usage",
    },
    {
      "component": [Function],
      "isClearable": true,
      "options": [
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_sla, {"context":"Premium"})",
          "value": "Premium",
        },
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_sla, {"context":"Standard"})",
          "value": "Standard",
        },
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_sla, {"context":"Self-Support"})",
          "value": "Self-Support",
        },
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_sla, {"context":"none"})",
          "value": "",
        },
      ],
      "selected": true,
      "title": "t(curiosity-toolbar.label_filter, {"context":"sla"})",
      "value": "sla",
    },
  ],
}
`;

exports[`ToolbarFieldSelectCategory Component should return options, and an updated current category with a hook: options, initialCategory, hook 1`] = `
{
  "currentCategory": undefined,
  "initialCategory": "usage",
  "options": [
    {
      "component": [Function],
      "isClearable": true,
      "options": [
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_usage, {"context":"Production"})",
          "value": "Production",
        },
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_usage, {"context":"Development/Test"})",
          "value": "Development/Test",
        },
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_usage, {"context":"Disaster Recovery"})",
          "value": "Disaster Recovery",
        },
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_usage, {"context":"none"})",
          "value": "",
        },
      ],
      "selected": true,
      "title": "t(curiosity-toolbar.label_filter, {"context":"usage"})",
      "value": "usage",
    },
    {
      "component": [Function],
      "isClearable": true,
      "options": [
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_sla, {"context":"Premium"})",
          "value": "Premium",
        },
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_sla, {"context":"Standard"})",
          "value": "Standard",
        },
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_sla, {"context":"Self-Support"})",
          "value": "Self-Support",
        },
        {
          "selected": false,
          "title": "t(curiosity-toolbar.label_sla, {"context":"none"})",
          "value": "",
        },
      ],
      "selected": false,
      "title": "t(curiosity-toolbar.label_filter, {"context":"sla"})",
      "value": "sla",
    },
  ],
}
`;
